fixed gap in burger

--- a/css/style.css
+++ b/css/style.css
@@ -946,7 +946,7 @@ padding: 30px 0;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    gap: 40px;
+    gap: 15px;
     backdrop-filter: blur(10px);
   }
 
